# humecord

./: README.md  __init__.py  __main__.py  bot.py  bot_init.py  config.default.yml  config.types.yml  data.py  funcs.py  pyproject.toml  requirements.txt
changelogs/: 0-1-3.yml  0-2-0.yml  0-2-1.yml  0-3-0.yml  0-3-1.yml  0-4-0.yml  0-4-1.yml
classes/: __init__.py  argparser.py  bot.py  commands.py  config.py  console.py  debugconsole.py  discordclasses.py  events.py  interactions.py  loader.py  logger.py  loops.py  messages.py  overrides.py  permissions.py  replies.py  syslogger.py  terminal.py
commands/: __init__.py  _dev.py  about.py  botban.py  dev.py  exec_cmd.py  help.py  locate.py  logs.py  loops.py  messages.py  overrides.py  profile.py  settings.py  syslogger.py  useredit.py
config/: config.default.yml  config.types.yml  endpoints.default.yml  globals.default.yml  globals.types.yml  lang.default.yml  lang.types.yml
docs/: README.md
docs/basics/: README.md  argparser.md  (+10 more)
events/: __init__.py  on_interaction.py  on_message.py  on_ready.py  ws.py
humecord/: __init__.py  __main__.py  enums.py  funcs.py
interfaces/: __init__.py  apiinterface.py  fileinterface.py  wsinterface.py
loops/: __init__.py  post_stats.py  purge_syslogs.py  recover_api.py  refresh_status.py  update_overrides.py
utils/: __init__.py  _logger.py  argrules.py  async_mcrcon.py  colors.py  components.py  consolecommands.py  dateutils.py  dbutils.py  debug.py  discordutils.py  errorhandler.py  exceptions.py  hcutils.py  hex.py  logger.py  miscutils.py  musicutils.py  subprocess.py
(+91 files in other folders)
